--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/scan"
+        android:background="@drawable/scan_button"
+        android:layout_width="match_parent"
+        android:layout_weight="8"
+        android:text="@string/scan"
+        android:textColor="@color/offwhite"
+        android:textSize="50sp"
+        android:layout_height="0dp"/>
+
+    <Button
+        android:id="@+id/history"
+        app:backgroundTint="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_margin="10dp"
+        android:text="@string/history"
+        android:textColor="@color/lightGrey"
+        android:textSize="50sp" />
+
+</LinearLayout>
