--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="offwhite">#f8f8ff</color>
+    <color name="lightGrey">#C0C0C0</color>
+    <color name="black">#000000</color>
+    <color name="danger">#ef8888</color>
 </resources>
